@@ -59,3 +59,4 @@ suspension_percentage = "0"
 
 template_file = "receipt.html"
 content_type = "text/html"
+type = html
