@@ -16,6 +16,51 @@
 		document.forms['documentadd'].action += '&print=1';
 		document.forms['documentadd'].submit();
 	}
+	
+	function setnumberplans()
+	{
+		var type = document.forms['documentadd'].elements['document[type]'].value;
+		
+		if(type==0)
+		{
+			document.getElementById('numberplans').style.display = 'none';
+			document.getElementById('numberplans').innerHTML = '<INPUT type="hidden" name="document[numberplanid]" value="0">';
+		}
+		else
+		{
+			var p = new Array();
+			var pr = new Array();
+		{/literal}
+			var s = {$document.numberplanid|default:0};
+			{foreach from=$_DOCTYPES key=key item=item}{if $key < 0}
+			    p[{$key}] = new Array();
+			    pr[{$key}] = new Array();
+			    {foreach from=$allnumberplans item=plan}{if $plan.doctype == $key}{assign var=period value=$plan.period}
+				p[{$key}][{$plan.id}] = '{number number=$plan.next template=$plan.template time=$document.cdate}';
+				pr[{$key}][{$plan.id}] = '{$_NUM_PERIODS.$period}';
+			    {/if}{/foreach}
+			{/if}{/foreach}
+		{literal}	
+			if(p[type].length)
+			{
+				var result = '<SELECT name="document[numberplanid]">';
+				for(key in p[type])
+				{
+					result = result + '<OPTION value="' + key + '"';
+					if(key == s)
+						result += ' SELECTED';
+					result = result + '>' + p[type][key] + ' (' + pr[type][key] + ') </OPTION>';
+				}
+				result += '</SELECT>';
+
+				document.getElementById('numberplans').innerHTML = result;
+			}
+			else
+				document.getElementById('numberplans').innerHTML = '<INPUT type="hidden" name="document[numberplanid]" value="0">';
+				
+			document.getElementById('numberplans').style.display = 'inline';
+		}
+	}
 //-->
 </script>
 {/literal}
@@ -35,6 +80,22 @@
 	</TR>
 	<TR class="LIGHT">
 		<TD width="1%" class="fleft">
+			<IMG src="img/info.gif" alt="">
+		</TD>
+		<TD width="1%">
+			<B>{t}Type:{/t}
+		</TD>
+		<TD width="98%" class="fright">
+			<SELECT SIZE="1" NAME="document[type]" onchange="setnumberplans();" {tip text="Select document type" trigger="type"}>
+				<OPTION VALUE="0">... {t}select type{/t} ...</OPTION>
+				{foreach from=$_DOCTYPES key=key item=item}{if $key < 0}
+				<OPTION VALUE="{$key}"{if $document.type==$key} SELECTED{/if}>{$item}</OPTION>
+				{/if}{/foreach}
+			</SELECT>
+		</TD>
+	</TR>
+	<TR class="LIGHT">
+		<TD width="1%" class="fleft">
 			<IMG src="img/docum.gif" alt="">
 		</TD>
 		<TD width="1%">
@@ -42,32 +103,19 @@
 		</TD>
 		<TD width="98%" class="fright">
 			<INPUT type="text" name="document[number]" value="{if $document.number}{$document.number}{/if}" size="15" {tip text="Enter document number (leave this field empty to obtain next number)" trigger="number"}>&nbsp;
+			<DIV id="numberplans" style="display: {if !$document.numberplanid}none{else}inline{/if};">
 			{if $numberplans}
 			<SELECT name="document[numberplanid]" {tip text="Select numbering plan"}>
-			{foreach item=plan from=$numberplans}
+				<OPTION value="0"{if !$document.numberplanid} SELECTED{/if}>... {t}select numbering plan{/t} ...</OPTION>
+			    {foreach item=plan from=$numberplans}
 				{assign var=period value=$plan.period}
 				<OPTION value="{$plan.id}"{if $plan.id==$document.numberplanid} SELECTED{/if}>{number number=$plan.next template=$plan.template time=$document.cdate} ({$_NUM_PERIODS.$period})</OPTION>
-			{/foreach}
+			    {/foreach}
+			</SELECT>
 			{else}
 				<INPUT type="hidden" name="document[numberplanid]" value="0">
 			{/if}
-			</SELECT>
-		</TD>
-	</TR>
-	<TR class="LIGHT">
-		<TD width="1%" class="fleft">
-			<IMG src="img/info.gif" alt="">
-		</TD>
-		<TD width="1%">
-			<B>{t}Type:{/t}
-		</TD>
-		<TD width="98%" class="fright">
-			<SELECT SIZE="1" NAME="document[type]" {tip text="Select document type" trigger="type"}>
-				<OPTION VALUE="0">... {t}select type{/t} ...</OPTION>
-				{foreach from=$_DOCTYPES key=key item=item}{if $key < 0}
-				<OPTION VALUE="{$key}"{if $document.type==$key} SELECTED{/if}>{$item}</OPTION>
-				{/if}{/foreach}
-			</SELECT>
+			</DIV>
 		</TD>
 	</TR>
 	<TR CLASS="light">
@@ -166,6 +214,7 @@ cal1.time_comp = false;
 var cal2 = new calendar(document.forms['documentadd'].elements['document[todate]']);
 cal2.time_comp = false;
 document.forms['documentadd'].elements['document[title]'].focus();
+setnumberplans();
 //-->
 </SCRIPT>
 {include file="footer.html"}
