@@ -6,6 +6,8 @@ version ? (????-??-??):
     "ALTER TABLE ... ADD ... NOT NULL DEFAULT ...": 2006061200, 2006082300,
     2006081000 (alec) 
   - added document type "customer sheet" and "contract termination" (alec)
+  - BTS#0000599: patched xajax library for using it with other ajaxized stuff (alec)
+  - in documents creation numbering plans are binded with document types (alec)
 
 version 1.9.3 Zarin (2006-09-19):
 
